--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	<link rel="stylesheet" type="text/css" href="./example.css">
 </head>
 <body>
-	<div class="page">
+	<div class="page page-index">
 		<div class="page-body">
 			<div class="form-groups-title mt-5">基础组件</div>
 			<div class="form-groups">
